--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Jacob Eanes</a>
+                <a class="navbar-brand" href="#page-top">Jake's Dashboard</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,9 +73,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" style="border-radius: 50%;" src="img/profile2.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Start Bootstrap</span>
+                        <span class="name">Jacob Eanes</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">- Full Stack Software Engineer - </span>
                     </div>
                 </div>
             </div>
